--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", 
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", 
+    sans-serif;
+    -webkit-text-size-adjust: 100%;
 }
 
 .header {
@@ -10,6 +17,7 @@ body {
     padding: 20px 200px;
     background-color: #1F2937;
     color: #F9FAF8;
+    gap: 1rem;
 }
 
 .logo {
@@ -28,15 +36,30 @@ body {
 .hero {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 40px 200px;
     background-color: #1F2937;
     color: #F9FAF8;
+    gap: 2rem;
 }
 
 .hero_text {
+    flex: 1 1 0;
+    
+}
+
+.hero_img {
+    flex: 1 1 0;
+    border: 2px solid #E5E7EB;
+    margin-left: 0px;
     display: flex;
-    flex-direction: column;
-    justify-content:center;
+}
+
+.hero_img img {
+    flex: 1;
+    object-fit: cover;
+    max-height: calc(214px + 1rem);
+    border-radius: 3px;
 }
 
 h1 {
@@ -100,6 +123,7 @@ h2 {
     border-color: #3882F6;
     border-radius: 10px;
     border-style: solid;
+    width: 250px;
 }
 
 .card_txt {
